Added Task Entity and required endpoints. Created exception handler and task validation
