# src/main/resources/openapi/openApi.yaml
@@ -12,18 +12,16 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Task'
+              $ref: '#/components/schemas/TaskRequest'
       responses:
         '201':
           description: Task successfully created
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  id:
-                    type: long
-                    description: ID of the created task
+                type: integer
+                format: int64
+                description: Id of created task
         '400':
           description: Error creating task
     get:
@@ -37,7 +35,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Task'
+                  $ref: '#/components/schemas/TaskDTO'
         '204':
           description: No tasks available
   /tasks/{id}:
@@ -46,7 +44,9 @@ paths:
         in: path
         required: true
         schema:
-          type: long
+          type: integer
+          format: int64
+          description: id of the task
     delete:
       summary: Delete task
       operationId: deleteTask
@@ -58,15 +58,13 @@ paths:
     put:
       summary: Update task status
       operationId: updateTaskStatus
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                status:
-                  type: string
+      parameters:
+        - schema:
+            type: string
+          name: status
+          in: path
+          description: task status
+          required: true
       responses:
         '200':
           description: Task status successfully updated
@@ -80,7 +78,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Task'
+              $ref: '#/components/schemas/TaskRequest'
       responses:
         '200':
           description: Task fields successfully changed
@@ -88,12 +86,29 @@ paths:
           description: Error changing task fields
 components:
   schemas:
-    Task:
+    TaskRequest:
+      description: Task Request used for creating or updating task
       type: object
       properties:
-        id:
-          type: long
         status:
-          type: string
+          $ref: '#/components/schemas/Status'
         description:
           type: string
+        name:
+          type: string
+    TaskDTO:
+      description: Basic Task DTO containing all basic information
+      allOf:
+        - type: object
+          properties:
+            id:
+              type: integer
+              format: int64
+        - $ref: '#/components/schemas/TaskRequest'
+    Status:
+      type: string
+      description: Task status. Can be CREATE, IN_PROGRESS or DONE
+      enum:
+        - CREATED
+        - IN_PROGRESS
+        - DONE
